corrected layout to be alignment (#1506)

--- a/src/components/calcite-action/calcite-action.scss
+++ b/src/components/calcite-action/calcite-action.scss
@@ -76,7 +76,7 @@
   @apply p-5 text--1h;
 }
 
-:host([layout="center"]) .button {
+:host([alignment="center"]) .button {
   @apply justify-center w-full;
 }
 
